@@ -2,7 +2,7 @@ public class ConditionalExpressionTemplate implements Template{
     private final String resultingString;
 
     public ConditionalExpressionTemplate(Template condition, Template positiveResult, Template negativeResult) {
-        resultingString = "%s ? %s : %s".formatted(condition, positiveResult, negativeResult);
+        resultingString = String.format("%s ? %s : %s", condition, positiveResult, negativeResult);
     }
 
     @Override
